# jump-to-django

./: .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml
.github/ISSUE_TEMPLATE/: 템플릿-제목.md
common/: views.py
config/: settings.py  urls.py
mysite/: settings.py
pybo/: models.py  urls.py
pybo/migrations/: 0001_initial.py  0002_question_author.py  0003_answer_author.py  0004_answer_modify_date_question_modify_date.py  0005_answer_voter_question_voter_alter_answer_author_and_more.py
pybo/views/: answer_views.py  base_views.py  question_views.py
templates/: base.html  form_errors.html  navbar.html
templates/common/: login.html  signup.html
templates/pybo/: question_detail.html  question_form.html  question_list.html
